refactor: removed use of vulnerable library org.apache.commons:commons-text.
Replaced with basic string manipulation